# cep18-limited

./: Makefile  README.md
cep18/: Cargo.toml
cep18-test-contract/src/: main.rs
cep18/src/: allowances.rs  constants.rs  entry_points.rs  error.rs  events.rs  main.rs  modalities.rs  utils.rs
client-js/: .eslintrc.js  README.md  out.json  package-lock.json  package.json  run_test.sh  run_tests.sh
client-js/examples/: install.ts  usage.ts  usage2.ts
client-js/src/: CEP18Client.ts  EventEnabledContract.ts  TransactionProcessedParser.ts  TypedContract.ts  events.ts  index.ts  types.ts
client-js/tests/: config.ts  utils.ts
client-js/tests/e2e/: CEP18Client.test.ts
client-js/tests/unit/: CEP18Client.test.ts
client-js/tests/unit/json/: approve-args.json  change-security-args.json  incrase-allowance-args.json  mint-args.json  transfer-args.json  transfer-from-args.json
tests/: Cargo.toml
tests/fixtures/cep18-2.0.0-rc3-minted/: state.json
tests/fixtures/cep18-2.0.0-rc3-minted/global_state/: data.lmdb  data.lmdb-lock
tests/fixtures/cross-generation/: state.json
tests/fixtures/cross-generation/global_state/: data.lmdb  data.lmdb-lock
tests/src/: allowance.rs  events.rs  fixture_gen.rs  install.rs  lib.rs  migration.rs  mint_and_burn.rs  transfer.rs
tests/src/legacy_compat/: allowance.rs  events.rs  migration.rs  mint_and_burn.rs  mod.rs  transfer.rs  upgrade.rs
tests/src/utility/: constants.rs  installer_request_builders.rs  support.rs
