[package]
name = "tests"
version = "1.2.0"
edition = "2018"
authors = ["Michał Papierski <michal@casperlabs.io>"]

[dependencies]
casper-types = "4.0.1"
casper-engine-test-support = "7.0.1"
casper-execution-engine = "7.0.1"
once_cell = "1.16.0"
casper-fixtures = { git = "https://github.com/deuszex/casper-fixtures" }

[lib]
name = "tests"
bench = false
doctest = false

[[bin]]
name = "fixture_gen"
path = "src/fixture_gen.rs"
bench = false
doctest = false
